--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -70,7 +70,7 @@
                     </ul>
                 </li>
                 <li class="agenda">
-                    <a href='https://bohnclinicaestetica.site.agendapro.com/cl/sucursal/2103' target="_blank">Agendá tu hora</a>
+                    <a href='https://bohnclinicaestetica.site.agendapro.com/cl/sucursal/2103' target="_blank">Agenda tu hora</a>
                 </li> 
                 <!-- other items of navbar  -->
                 <li class="cards">
@@ -190,7 +190,7 @@
     
     <!-- free evaluation -->
     <section class="free-evaluation">
-        <div class="Click-here">Solicitá tu Evaluación Gratuita</div>        
+        <div class="Click-here">Solicita tu Evaluación Gratuita</div>        
         <div class="custom-model-main">
             <div class="custom-model-inner">        
                 <div class="close-btn">×</div>
@@ -201,10 +201,10 @@
                         </h1>
                         <img class="logo-pop" src="./assets/sinfondo-1-01.png" alt="logo">
                         <div class="title-pop">
-                            <h1>Agendá tu Evaluación Gratuita</h1>
+                            <h1>Agenda tu Evaluación Gratuita</h1>
                         </div>
                         <div class="time">
-                            <a class="Click-here" href="https://bohnclinicaestetica.site.agendapro.com/cl/sucursal/2103" target="_blank">Agendá tu hora</a>
+                            <a class="Click-here" href="https://bohnclinicaestetica.site.agendapro.com/cl/sucursal/2103" target="_blank">Agenda tu hora</a>
                         </div> 
                     </div>
                 </div>  
