--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -224,7 +224,7 @@
         <!-- tratamientos corporales -->
         <div class="content-section"> 
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/Anticelulítico.webp" alt="Anticelulitico">
+                <img src="./assets/treatments/Anticelulítico NUEVO.webp" alt="Anticelulitico">
                 <div class="treatment-buttons">
                   <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
